--- a/views/movies/index.ejs
+++ b/views/movies/index.ejs
@@ -1,8 +1,10 @@
 <% layout('layouts/boilerplateHome') %>
-
     <div class="container-fluid text-center">
+        <h1>WWFDB</h1>
+        <h3>Wielki Wyszukiwacz Filmów Daniela Badury</h3>
+
         <form id="movies-form" action="/movies/show" method="POST">
-            
+
             <label for="search">Wprowadź nazwę filmu
             </label>
             <input type="text" name='search' id='search'>
