--- a/views/layouts/boilerplateHome.ejs
+++ b/views/layouts/boilerplateHome.ejs
@@ -9,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="/public/assets/styles/home.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&family=Ubuntu:wght@300&display=swap"
+        rel="stylesheet">
     <!-- <link rel="stylesheet" href="../styles/home.css"> -->
 </head>
 
