--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -2,29 +2,59 @@
     <div class="main-container ">
         <h1 class="flame-text">Daniel Badura</h1>
         <div class="row">
-            <div class='card col-6'>
-                <div class='card-title'></div>
-                <a href="/widoczki">Widoczki</a>
+            <div class='card col-6 project-cards'>
+                <div class='card-title'>
+                    <a class='link-info' href="/widoczki">Widoczki</a>
+                </div>
+                <div class="card-body">
+                    strona z ładnymi widoczkami
+                </div>
+                
             </div>
-            <div class='card col-6'>
-                <div class='card-title'></div>
-                <a href="/keynotes/">Keynotes</a>
+            <div class='card col-6 project-cards'>
+                <div class='card-title'>
+                    <a class='link-info' href="/keynotes/">Keynotes</a>
+                </div>
+                <div class="card-body">
+                    wirtualne klawisze
+                </div>
+                
             </div>
-            <div class='card col-6'>
+            <div class='card col-6 project-cards'>
+                <div class='card-title'>
+                    <a class='link-info' href="/calculator">Kalkulator</a>
+                </div>
+                <div class="card-body">
+                    Ręcznie robiony kalkulator
+                </div>
                 <div class='card-title'></div>
-                <div class='card-title'></div>
-                <a href="/calculator">Kalkulator</a>
+                
             </div>
-            <div class='card col-6'>
-                <div class='card-title'></div>
-                <a href="/template">Templata</a>
+            <div class='card col-6 project-cards'>
+                <div class='card-title'>
+                    <a class='link-info' href="/template">Templata</a>
+                   
+                </div>
+                <div class="card-body">
+                    Templata strony internetowej
+                </div>
+               
             </div>
-            <div class='card col-6'>
-                <div class='card-title'></div>
-                <a href="/movies">Movies</a>
+            <div class='card col-6 project-cards'>
+                <div class='card-title'>
+                    <a class='link-info' href="/movies">WWFDB</a>
+                </div>
+                <div class="card-body">
+                    Wyszukiwarka filmowa
+
+                </div>
+            
             </div>
-            <div class='card col-6'>
-                <a href="/"> </a>
+            <div class='card col-6 project-cards'>
+                <a class='link-info'  href="/"> </a>
+                <div class="card-body">
+
+                </div>
             </div>
         </div>
     </div>
