--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -1,60 +1,54 @@
 <% layout('layouts/boilerplateHome') %>
-    <div class="main-container ">
+    <div class="main-container monsterrat ">
         <h1 class="flame-text">Daniel Badura</h1>
-        <div class="row">
+        <div class="row text-start">
             <div class='card col-6 project-cards'>
-                <div class='card-title'>
+                <div class='card-title bebas-neue'>
                     <a class='link-info' href="/widoczki">Widoczki</a>
                 </div>
-                <div class="card-body">
-                    strona z ładnymi widoczkami
+                <div class="card-body monsterrat ">
+                    Strona z ładnymi widoczkami
                 </div>
                 
             </div>
             <div class='card col-6 project-cards'>
-                <div class='card-title'>
+                <div class='card-title bebas-neue'>
                     <a class='link-info' href="/keynotes/">Keynotes</a>
                 </div>
-                <div class="card-body">
-                    wirtualne klawisze
+                <div class="card-body monsterrat">
+                    Wirtualne klawisze
                 </div>
                 
             </div>
             <div class='card col-6 project-cards'>
-                <div class='card-title'>
+                <div class='card-title bebas-neue'>
                     <a class='link-info' href="/calculator">Kalkulator</a>
                 </div>
-                <div class="card-body">
+                <div class="card-body monsterrat">
                     Ręcznie robiony kalkulator
                 </div>
-                <div class='card-title'></div>
                 
             </div>
             <div class='card col-6 project-cards'>
-                <div class='card-title'>
+                <div class='card-title bebas-neue'>
                     <a class='link-info' href="/template">Templata</a>
                    
                 </div>
-                <div class="card-body">
+                <div class="card-body monsterrat">
                     Templata strony internetowej
                 </div>
                
             </div>
             <div class='card col-6 project-cards'>
-                <div class='card-title'>
+                <div class='card-title  bebas-neue'>
                     <a class='link-info' href="/movies">WWFDB</a>
                 </div>
-                <div class="card-body">
+                <div class="card-body monsterrat">
                     Wyszukiwarka filmowa
 
                 </div>
             
             </div>
-            <div class='card col-6 project-cards'>
-                <a class='link-info'  href="/"> </a>
-                <div class="card-body">
-
-                </div>
-            </div>
+          
         </div>
     </div>
