--- a/views/layouts/boilerplateWidoczki.ejs
+++ b/views/layouts/boilerplateWidoczki.ejs
@@ -26,7 +26,7 @@
 
 
     <%- include('../partials/navbarWidoczki') %>
-        <main class="container">
+        <main class="container page-container">
             <%- include('../partials/flash') %>
                 <%- body %>
         </main>
