--- a/views/partials/navbarWidoczki.ejs
+++ b/views/partials/navbarWidoczki.ejs
@@ -33,7 +33,7 @@
     var navbar = document.getElementById("navbar");
 
     // Get the offset position of the navbar
-    var sticky = navbar.offsetTop;
+    var sticky = navbar.offsetTop || 0;
 
     // Add the sticky class to the navbar when you reach its scroll position. Remove "sticky" when you leave the scroll position
     function myFunction() {
