fixed minor browser errors

--- a/views/layouts/boilerplateKeynotes.ejs
+++ b/views/layouts/boilerplateKeynotes.ejs
@@ -39,8 +39,8 @@
     <!-- stylesheets -->
     <link rel="stylesheet" href="/public/assets/styles/keynotes.css" type="text/css">
     <!-- favicon.svg -->
-    <link rel="shortcut icon" href="./images/favicon.svg">
-    <link rel="icon" href="/favicon.svg" />
+    <link rel="shortcut icon" href="../../public/assets/images/Keynotes/favicon.svg">
+    <link rel="icon" href="../../public/assets/images/Keynotes/favicon.svg" />
 
 </head>
 </head>
