--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="footer bg-dark py-1" id='footer'>
+<footer class="footer bg-dark py-1 fixed-bottom" id='footer'>
     <div class="container">
         <span class="text-muted">&copy; DB Portfolio Project 2021 </span>
     </div>
