Added project Github Lens

--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -37,6 +37,14 @@
             </div>
             <div class='card col-6 project-cards'>
                 <div class='card-title bebas-neue'>
+                    <a class='link-info' href="https://github-lens.herokuapp.com/">Github Lens</a>
+                </div>
+                <div class="card-body monsterrat">
+                    Wyszukiwarka użytkowników Github
+                </div>
+            </div>
+            <div class='card col-6 project-cards'>
+                <div class='card-title bebas-neue'>
                     <a class='link-info' href="/calculator">Kalkulator</a>
                 </div>
                 <div class="card-body monsterrat">
